Fixed label and checkbox alignment in less file

--- a/yeti/bootswatch.less
+++ b/yeti/bootswatch.less
@@ -430,3 +430,9 @@ label,
     color: @text-color;
   }
 }
+
+// Fix label and checkbox alignment ===========================================
+input[type="radio"],
+input[type="checkbox"] {
+  margin: 1px 0 0 !important;
+}
